--- a/Donations.css
+++ b/Donations.css
@@ -4,11 +4,21 @@ body {
     color: #333;
     margin: 0;
     padding: 20px;
+    background-image: url('5dc3d8d2-751f-4100-9092-b76d12006326.jpg');
+    background-size:cover; /* Cover the entire background */
+    background-repeat: no-repeat; /* No repeating of background */
+    background-attachment: fixed; /* Fixed position */
+    background-position: center center; /* Center the background */
+    opacity: 0.9;
+
 }
 
 h1 {
     text-align: center;
-    color: #007bff;
+    color: hsl(170, 100%, 50%);
+    background-color: #333;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 form {
@@ -32,8 +42,10 @@ input[type="text"],
 select {
     width: 100%;
     padding: 10px;
+    padding-right: 15px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    margin-right: 10px;
+    border: 1px solid #000000;
     border-radius: 5px;
     transition: border-color 0.3s;
 }
