--- a/Donations.css
+++ b/Donations.css
@@ -53,14 +53,14 @@ select {
 input[type="number"]:focus,
 input[type="text"]:focus,
 select:focus {
-    border-color: #007bff;
+    border-color: #03274e;
     outline: none;
 }
 
 button {
     width: 100%;
     padding: 15px;
-    background-color: #007bff;
+    background-color: #03274e;
     color: white;
     border: none;
     border-radius: 5px;
@@ -69,7 +69,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #03274e;
 }
 
 #paypal-button-container {
@@ -81,7 +81,8 @@ button:hover {
     position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
     top: 20px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background-color: #000000; /* Button color */
+    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
+    overflow-y: auto; /* Enable vertical scrolling */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -93,7 +94,8 @@ button:hover {
 }
 
 .back-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
+    overflow-y: auto; /* Enable vertical scrolling */ /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
 
