--- a/podcast.css
+++ b/podcast.css
@@ -177,7 +177,8 @@ footer p {
     position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
     top: 20px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background-color: #000000; /* Button color */
+    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
+    overflow-y: auto; /* Enable vertical scrolling */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -189,6 +190,7 @@ footer p {
 }
 
 .back-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
+    overflow-y: auto; /* Enable vertical scrolling */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
