--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ button {
 }
 
 button:hover {
-    background-color: #066add;
+    background-color: #03274e;
 }
 
 /* Home and Prayer Request pages */
@@ -159,7 +159,7 @@ button:hover {
 .options button {
     padding: 10px 20px;
     margin: 10px;
-    background-color: #007bff;
+    background-color: #e3edf8;
     color: white;
     border: none;
     border-radius: 5px;
@@ -167,7 +167,7 @@ button:hover {
 }
 
 .options button:hover {
-    background-color: #0056b3;
+    background-color: #cfdff0;
 }
 
 /* Shop Online section */
@@ -209,7 +209,7 @@ button:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #007bff;
+    background-color: #03274e;
     color: white;
     border-radius: 50%;
     padding: 10px;
@@ -242,6 +242,6 @@ button:hover {
 }
 
 .back-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #03274e; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
