--- a/ChatGroup.css
+++ b/ChatGroup.css
@@ -190,6 +190,7 @@ input[type="text"], input[type="file"] {
 }
 
 .back-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #0d0aa8; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
