--- a/Donations.css
+++ b/Donations.css
@@ -81,8 +81,7 @@ button:hover {
     position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
     top: 20px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
-    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: #000000; /* Button color */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -94,8 +93,8 @@ button:hover {
 }
 
 .back-button:hover {
-    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
-    overflow-y: auto; /* Enable vertical scrolling */ /* Darker green on hover */
+    background-color: #0d0aa8; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
 
