--- a/Member_profile.css
+++ b/Member_profile.css
@@ -154,8 +154,7 @@ body {
     position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
     top: 20px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
-    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: #000000; /* Button color */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -165,9 +164,8 @@ body {
     transition: background-color 0.3s, transform 0.2s; /* Transition effects */
     z-index: 1000; /* Ensure it’s on top of other elements */
 }
-
 .back-button:hover {
-    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
-    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: #0d0aa8; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
