--- a/Word_of_the_day.css
+++ b/Word_of_the_day.css
@@ -200,6 +200,6 @@ footer p {
 }
 
 .back-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #0d0aa8; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
