Sign Up Headign color change

--- a/SignUp.css
+++ b/SignUp.css
@@ -32,7 +32,7 @@ body {
     text-align: center;
     margin-bottom: 20px;
     font-size: 28px;
-    color: #d89140; /* Gold color for header */
+    color: #ffffff; /* Gold color for header */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
@@ -77,7 +77,7 @@ select:focus {
 
 /* Button Styles */
 button {
-    background-color: #d89140; /* Gold background */
+    background-color: #000000; /* Gold background */
     color: #fff; /* Text color */
     padding: 10px 15px;
     border: none;
@@ -89,7 +89,7 @@ button {
 }
 
 button:hover {
-    background-color: #b27c25; /* Darker shade on hover */
+    background-color: #2725b2; /* Darker shade on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
 
